--- a/.prettierrc
+++ b/.prettierrc
@@ -1,1 +1,5 @@
-{ "singleQuote": true, "trailingComma": "all", "endOfLine": "lf" }
+{
+  "singleQuote": true,
+  "trailingComma": "all",
+  "endOfLine": "lf"
+}
